--- a/css/styles.css
+++ b/css/styles.css
@@ -112,21 +112,25 @@ a:hover, a:focus {
   margin-left: 50px;
 }
 
-.contacts-link:hover, .contacts-link:focus{
-  fill: var(--accent-color)
+.contacts-link :hover, .contacts-link :focus, 
+.contact-icon:hover, .contact-icon:focus{
+  color: var(--accent-color);
+  fill: var(--accent-color);
 }
 
+
 .icon-mail {
+  fill: currentColor;
   width: 16px;
   height: 12px;
   margin-right: 10px;
-  color: var(--secondary-text-color)
 }
 
 .icon-phone {
-  color: var(--secondary-text-color)
+  fill: currentColor;
   width: 10px;
   height: 16px;
+  margin-right: 10px;
 }
 
 .main-nav-link
@@ -137,13 +141,16 @@ a:hover, a:focus {
   letter-spacing: 0.02em;
 }
 
-.contacts-item {
+/* .contacts-item {
   display: block;
   width: auto;
-  }
+  } */
 
 .contacts-link
 {
+  display: flex;
+  width: auto;
+  height: auto;
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -155,6 +162,8 @@ a:hover, a:focus {
 /* стили легенд */
 .legend-section {
   max-width: 1600px;
+  background-repeat: no-repeat;
+  background-size: contain;
   background-color: #2f303a;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), url(../images/img-hero.jpg);
   padding: 200px 0px;
@@ -295,7 +304,8 @@ a:hover, a:focus {
 
 /* наша команда */
 .section-our-team {
-  background-color: #f5f4fa;
+  /* background-color: #f5f4fa; */
+  background: #F5F4FA;
 }
 .our-team-list {
   display: flex;
@@ -325,14 +335,19 @@ padding-top: 30px;
   text-align: center;
   letter-spacing: 0.03em;
   color: #757575;
+  margin-bottom: 16px;
 }
 
 .social{
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  padding: 16px 32px 30px 32px;
+  justify-content: center;
+ }
+
+.social:not(:first-child){
+  margin-left: 10px;
 }
+
 .social-link{
   display: flex;
   justify-content: center;
@@ -356,7 +371,7 @@ padding-top: 30px;
 .team-member-item
 {
 background-color: #ffffff;
-filter: drop-shadow(0px 4px 4px rgba(240, 102, 102, 0.25)) drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 0px 0px 4px 4px;
 }
 
@@ -396,25 +411,40 @@ margin-bottom: 50px;
     width: 170px;
     height: 92px;
     padding: 16px 32px;
+    fill: #AFB1B8;
     border: 1px solid #AFB1B8;
     border-radius: 4px;
   }
 
-  .clients-link:hover, .clients-link:focus{
+  .clients-link:hover, .clients-link:focus, 
+  .clients-icon:hover, .clients-icon:focus {
     border-color: var(--accent-color);
-  }
-
-    .clients-icon:hover, .clients-icon:focus{
     fill: var(--accent-color);
-  }
+    }
+
+   
 
   .clients-icon{
     width: 106px;
     height: 60px;
-    fill: #AFB1B8;
-  }
+   }
 
 /* футер */
+
+.footer-container {
+  display: flex;
+  align-items: flex-start;
+}
+
+.footer-contacts-block{
+  display: inline-block;
+}
+
+.footer-social{
+  display: inline-block;
+    align-self: flex-start;
+}
+
 .footers-contacts {
   text-decoration: none;
 }
@@ -431,7 +461,7 @@ margin-bottom: 50px;
   color: rgba(255, 255, 255, 0.6);
 }
 .footer {
-  min-width: 1600px;
+  display: flex;
   background-color: #2f303a;
   padding: 60px 0;
 }
@@ -511,6 +541,7 @@ margin-bottom: 50px;
 }
 
 .footer-social-title{
+background-color: inherit;
 color: #ffffff;
 font-weight: 700;
 font-size: 14px;
@@ -573,11 +604,10 @@ margin-bottom: 20px;
   margin-top: 50px;
 }
 
-.projects-galery-item:hover, .projects-galery-list:focus {
+.projects-galery-link:hover, .projects-galery-link:focus{
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-}
 .example-of-projects {
   font-weight: 700;
   font-size: 18px;
